# FreeKill

./: .gitignore  .qmllint.ini  CMakeLists.txt
Fk/Cheat/: PlayerDetail.qml
hacker/: CMakeLists.txt  db.hpp  record_master_md5.cpp  util.hpp
src/core/: util.cpp
